Funciones cliente y servidor, funciones protocolo send y recv con serializacion

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,12 @@
         "sockets.h": "c",
         "config.h": "c",
         "unistd.h": "c",
-        "shared.h": "c"
+        "shared.h": "c",
+        "log.h": "c",
+        "list.h": "c",
+        "types.h": "c",
+        "consola.h": "c",
+        "kernel.h": "c",
+        "cpu.h": "c"
     }
 }
