--- a/kernel/kernel.config
+++ b/kernel/kernel.config
@@ -11,3 +11,5 @@ HRRN_ALFA=0.5
 GRADO_MAX_MULTIPROGRAMACION=4
 RECURSOS=[DISCO, RECURSO_1]
 INSTANCIAS_RECURSOS=[1, 2]
+IP_KERNEL=127.0.0.1
+PUERTO_KERNEL=8000
