Emprolijamiento codigo (creacion sharedUtils.c)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "kernel.h": "c",
         "cpu.h": "c",
         "protocolo.h": "c",
-        "consola_utils.h": "c"
+        "consola_utils.h": "c",
+        "sharedutils.h": "c"
     }
 }
