Detalles, organizacion del codigo nada mas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,9 @@
         "cpu.h": "c",
         "protocolo.h": "c",
         "consola_utils.h": "c",
-        "sharedutils.h": "c"
+        "sharedutils.h": "c",
+        "pthread.h": "c",
+        "planificador.h": "c",
+        "string.h": "c"
     }
 }
