--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,8 @@
         "pthread.h": "c",
         "planificador.h": "c",
         "string.h": "c",
-        "procesar_kernel.h": "c"
+        "procesar_kernel.h": "c",
+        "cpu_utils.h": "c",
+        "kernel_utils.h": "c"
     }
 }
