--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "string.h": "c",
         "procesar_kernel.h": "c",
         "cpu_utils.h": "c",
-        "kernel_utils.h": "c"
+        "kernel_utils.h": "c",
+        "queue.h": "c"
     }
 }
