Retoques de codigo, agrego algunos loggers y creo un struct de config del Kernel. Hay un logger que falla en el planificador de largo plazo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "procesar_kernel.h": "c",
         "cpu_utils.h": "c",
         "kernel_utils.h": "c",
-        "queue.h": "c"
+        "queue.h": "c",
+        "shared_utils.h": "c"
     }
 }
