--- a/kernel/kernel.config
+++ b/kernel/kernel.config
@@ -6,8 +6,8 @@ IP_CPU=127.0.0.1
 PUERTO_CPU=8001
 PUERTO_ESCUCHA=8000
 ALGORITMO_PLANIFICACION=HRRN
-ESTIMACION_INICIAL=10000
+ESTIMACION_INICIAL=2000
 HRRN_ALFA=0.5
 GRADO_MAX_MULTIPROGRAMACION=4
-RECURSOS=[DISCO, RECURSO_1]
-INSTANCIAS_RECURSOS=[1, 2]
+RECURSOS=[DISCO]
+INSTANCIAS_RECURSOS=[1]
