Hago todo lo basico para filesystem y memoria

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "initializer_list": "c",
         "utility": "c",
         "inicializar.h": "c",
-        "ejecutar.h": "c"
+        "ejecutar.h": "c",
+        "file_system_utils.h": "c"
     }
 }
