Cambio un par de nombres de archivos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,8 @@
         "utility": "c",
         "inicializar.h": "c",
         "ejecutar.h": "c",
-        "file_system_utils.h": "c"
+        "file_system_utils.h": "c",
+        "procesar_consola_kernel.h": "c",
+        "procesar_cpu_kernel.h": "c"
     }
 }
