Empezamos con la serializacion de la tabla de segmentos, no termina de funcionar, creemos que hay un problema con el tamanio de los segmentos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
         "ejecutar.h": "c",
         "file_system_utils.h": "c",
         "procesar_consola_kernel.h": "c",
-        "procesar_cpu_kernel.h": "c"
+        "procesar_cpu_kernel.h": "c",
+        "memoria_utils.h": "c"
     }
 }
