--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,8 @@
         "file_system_utils.h": "c",
         "procesar_consola_kernel.h": "c",
         "procesar_cpu_kernel.h": "c",
-        "memoria_utils.h": "c"
+        "memoria_utils.h": "c",
+        "algoritmos.h": "c",
+        "mmu.h": "c"
     }
 }
