Cambio de lugar las funciones de debug (mostrar huecos y mostrar segmentos) a shared_utils y agrego una setting al json para que visual no marque en rojo cuando definimos una funcion dentro de otra (esto lo solemos hacer para las funciones de las commons

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,5 +38,8 @@
         "mmu.h": "c",
         "procesar_cpu_memoria.h": "c",
         "serializacion.h": "c"
-    }
+    },
+    
+	"C_Cpp.errorSquiggles": "disabled"
+	
 }
