Retoco algunas cosas del mapeo de archivos en FS, ya practicamente esta hecho

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ dkms.conf
 /cpu/cpu
 /fileSystem/fileSystem
 /memoria/memoria
+/fileSystem/fileSystem/bitmap.dat
+/fileSystem/fileSystem/bloques.dat
