Mapeo de archivos OK, hice tambien el recorrido del directorio para crear las estructuras administrativas de los FCB y anda joyagit add .. Maniana hacemos fseek, fopen y fclosegit add .!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,7 +37,8 @@
         "algoritmos.h": "c",
         "mmu.h": "c",
         "procesar_cpu_memoria.h": "c",
-        "serializacion.h": "c"
+        "serializacion.h": "c",
+        "bitarray.h": "c"
     },
 	
 }
