--- a/fileSystem/filesystem.config
+++ b/fileSystem/filesystem.config
@@ -4,5 +4,5 @@ PUERTO_ESCUCHA=8003
 PATH_SUPERBLOQUE=superbloque.dat
 PATH_BITMAP=bitmap.dat
 PATH_BLOQUES=bloques.dat
-PATH_FCB=/home/utnso/fs/fcb
+PATH_FCB=fcb
 RETARDO_ACCESO_BLOQUE=15000
