Hicimos F_WRITE, y corrimos las pruebas finales, creemos que funciona, pero hay que seguir probando. TP FINAL V1.0
Co-authored-by: Franco Centurión <frcenturion@users.noreply.github.com>
Co-authored-by: juanDolce <juanDolce@users.noreply.github.com>
Co-authored-by: D'ALESSANDRO ANDRÉS <andydal2002@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,7 +38,8 @@
         "mmu.h": "c",
         "procesar_cpu_memoria.h": "c",
         "serializacion.h": "c",
-        "bitarray.h": "c"
+        "bitarray.h": "c",
+        "procesar_filesystem_memoria.h": "c"
     },
 	
 }
