--- a/tests/DEADLOCK/filesystem.config
+++ b/tests/DEADLOCK/filesystem.config
@@ -1,8 +1,8 @@
 IP_MEMORIA=127.0.0.1
 PUERTO_MEMORIA=8002
 PUERTO_ESCUCHA=8003
+PATH_SUPERBLOQUE=superbloque.dat
+PATH_BITMAP=bitmap.dat
+PATH_BLOQUES=bloques.dat
+PATH_FCB=fcb
 RETARDO_ACCESO_BLOQUE=15000
-PATH_SUPERBLOQUE=~/fs/sbloque.dat
-PATH_BITMAP=~/fs/bitmap.dat
-PATH_BLOQUES=~/fs/bloques.dat
-PATH_FCB=~/fs/fcb
